# friking-shark

./: .gitignore  .travis.yml  CMakeLists.txt  License.txt  Makefile  ProjectHome.md  Readme.txt  TODO.txt  Videos.md
AirUnitTypes/: AirUnitTypes.cpp  AirUnitTypes.vcproj  BomberType.cpp  BomberType.h  CMakeLists.txt  FighterType.cpp  FighterType.h  Makefile  PlayerType.cpp  PlayerType.h  stdafx.cpp  stdafx.h
BSPDebugger/: BSPDebugger.cpp  BSPDebugger.h  BSPDebugger.vcxproj  BSPDebugger.vcxproj.filters  BSPDebuggerMainWindow.cpp  BSPDebuggerMainWindow.h  CMakeLists.txt  stdafx.cpp
BonusTypes/: BombBonusType.h  BonusTypes.cpp  BonusTypes.vcproj  CMakeLists.txt  LiveBonusType.cpp  LiveBonusType.h  Makefile  PointBonusType.cpp  PointBonusType.h  SpeedUpgradeBonusType.cpp  SpeedUpgradeBonusType.h  WeaponUpgradeBonusType.cpp  WeaponUpgradeBonusType.h  resource.h  stdafx.cpp  stdafx.h
FormationEditor/: CMakeLists.txt  FormationEditor.cpp  FormationEditor.h  FormationEditor.vcproj  FormationEditor.vcxproj  FormationEditor.vcxproj.filters  FormationEditorMainWindow.cpp  FormationEditorMainWindow.h  FormationEditorObjectLabel.cpp  FormationEditorObjectLabel.h  FormationEditorObjectSelector.h  stdafx.h
GameEngine/: CMakeLists.txt  GUIManager.cpp  GUIManager.h  GameEngine-VS2010.sln  GameEngine.cpp  GameEngine.h  GameEngine.rc  GameEngine.sln  GameEngine.vcproj  GameRender.cpp  GameScreen.cpp  Globals.cpp  Log.cpp  Log.h  Makefile  StdAfx.cpp  StdAfx.h
GameEntityLib/: CMakeLists.txt  EntityBase.cpp  EntityBase.h  EntityTypeBase.cpp  EntityTypeBase.h  EntityUtilities.cpp  EntityUtilities.h  GameEntityLib.cpp  GameEntityLib.vcproj  Makefile  Route.cpp  Route.h  SteeringBehaviours.cpp  SteeringBehaviours.h  stdafx.cpp  stdafx.h
GameGUILib/: CMakeLists.txt  GameDialogBase.cpp  GameDialogBase.h  GameGUIBBoxGizmo.cpp  GameGUIBBoxGizmo.h  GameGUILib.h  GameGUILib.vcproj  GameGUILib.vcxproj  GameGUILib.vcxproj.filters  GameGUIRotationGizmo.cpp  GameGUIRotationGizmo.h  GameGUITranslationGizmo.cpp  GameGUITranslationGizmo.h  GameGUIUtil.cpp  GameWindowBase.cpp  GameWindowBase.h  Makefile  stdafx.cpp  stdafx.h
GameGraphics/: CMakeLists.txt  GLee.c  GLee.h  GameGraphics.cpp  GameGraphics.h  GameGraphics.vcproj  GameGraphics.vcxproj.filters  GameKeys.h  Makefile  OpenGLFont.cpp  OpenGLFont.h  OpenGLGraphics.h  OpenGLLight.cpp  OpenGLModel.cpp  OpenGLModel.h  OpenGLRender.cpp  OpenGLRender.h  OpenGLRenderDeferred.cpp  OpenGLRenderDeferred.h  OpenGLRenderForwardFixed.cpp  OpenGLRenderForwardFixed.h  OpenGLRenderForwardShader.cpp  OpenGLRenderForwardShader.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLViewport.cpp  OpenGLViewport.h  stdafx.cpp  stdafx.h
GameRunTimeLib/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  EventBase.cpp  EventBase.h  GameRunTimeLib.h  GameRunTimeLib.kdev4  GameRunTimeLib.vcproj  Makefile  Persistency.cpp  Persistency.h  PersistentTypes.cpp  PersistentTypes.h  PlatformDependent.cpp  PlatformDependent.h  SystemLoaderHelper.cpp  SystemModuleHelpers.cpp  SystemModuleHelpers.h  SystemObjectBase.cpp  SystemObjectWrapper.cpp  SystemObjectWrapper.h  SystemUnknownBase.cpp  TimeMeter.cpp  stdafx.cpp  stdafx.h
IATestSystems/: CMakeLists.txt  IAEntityBase.cpp  IAEntityBase.h  IATestMainWindow.cpp  IATestMainWindow.h  IATestSystems.cpp  IATestSystems.vcproj  IATestSystems.vcxproj  IATestUtils.cpp  IATestUtils.h  Makefile  SteeringBehaviours.cpp  SteeringBehaviours.h  TestScenarios.cpp  stdafx.cpp  stdafx.h
PlayAreaElements/: CMakeLists.txt  FormationType.cpp  FormationType.h  Makefile  PlayAreaCheckPoint.cpp  PlayAreaElementBase.cpp  PlayAreaElementBase.h  PlayAreaElements.cpp  PlayAreaElements.h  PlayAreaElements.vcproj  PlayAreaElements.vcxproj  PlayAreaEntity.cpp  PlayAreaEntity.h  PlayAreaFormation.cpp  PlayAreaFormation.h  Route.cpp  Route.h  stdafx.cpp  stdafx.h
ScenarioEditor/: CMakeLists.txt  Makefile  ScenarioEditor.cpp  ScenarioEditor.kdev4  ScenarioEditor.vcproj  ScenarioEditor.vcxproj  ScenarioEditorColorSelector.cpp  ScenarioEditorColorSelector.h  ScenarioEditorMainWindow.cpp  ScenarioEditorMainWindow.h  ScenarioEditorObjectLabel.cpp  ScenarioEditorObjectSelector.cpp  stdafx.cpp  stdafx.h
VectorLib/: 3DSFiles.cpp  3DSFiles.h  3DSTypes.cpp  3DSTypes.h  ASEFiles.cpp  ASEFiles.h  BmpFiles.cpp  BmpFiles.h  CMakeLists.txt  GBSFiles.cpp  GBSFiles.h  GCMFiles.cpp  GCMFiles.h  IniFiles.cpp  IniFiles.h  Makefile  OBJFiles.cpp  OpenGLExtensions.h  OpenGLViewPortBase.h  QuakeFiles.cpp  QuakeFiles.h  StdAfx.h  Utilities.h  VectorLib.cpp  VectorLib.h  VectorLib.vcproj  glprocs.c
tags/Game-1.01-Beta/: CMakeLists.txt  License.txt
trunk/BonusTypes/: BombBonusType.cpp  BombBonusType.h  BonusTypes.vcproj  BonusTypes.vcxproj  CMakeLists.txt  LiveBonusType.cpp  LiveBonusType.h  Makefile  PointBonusType.cpp  PointBonusType.h  SpeedUpgradeBonusType.cpp  WeaponUpgradeBonusType.cpp  WeaponUpgradeBonusType.h  stdafx.cpp  stdafx.h
trunk/GameGUILib/: CMakeLists.txt  GameDialogBase.cpp  GameGUIBBoxGizmo.cpp  GameGUIBBoxGizmo.h  GameGUILib.h  GameGUILib.vcproj  GameGUILib.vcxproj  GameGUILib.vcxproj.filters  GameGUIRotationGizmo.cpp  GameGUIRotationGizmo.h  GameGUITranslationGizmo.cpp  GameGUIUtil.cpp  GameWindowBase.cpp  GameWindowBase.h  Makefile  stdafx.h
trunk/GameRunTime/: CMakeLists.txt  GameRunTime.cpp  GameRunTime.h  GameRunTime.vcproj  InterfaceLeakAPI.cpp  InterfaceLeakAPI.h  Makefile  System.h  SystemManager.cpp  SystemManager.h  SystemModule.cpp  SystemModule.h  stdafx.cpp  stdafx.h
trunk/GameRunTimeLib/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  EventBase.cpp  EventBase.h  GameRunTimeLib.h  GameRunTimeLib.vcproj  Makefile  Persistency.cpp  Persistency.h  PersistentTypes.cpp  PersistentTypes.h  PlatformDependent.cpp  PlatformDependent.h  SystemLoaderHelper.cpp  SystemLoaderHelper.h  SystemModuleHelpers.cpp  SystemObjectBase.cpp  SystemObjectBase.h  SystemObjectWrapper.cpp  SystemObjectWrapper.h  SystemUnknownBase.cpp  SystemUnknownBase.h  stdafx.cpp
trunk/GroundUnitTypes/: CMakeLists.txt  DreadnoughtTowerType.cpp  GroundBossType.h  (+21 more)
(+3220 files in other folders)
